# BrainVoyager-MCP

./: .gitignore  README.md  main.py  mcp_listener.py  mcp_server.py  pyproject.toml
API/: bv_api.py
MCP/: mcp_helper.py  mcp_listener.py  mcp_server.py
MCP/_shared/: __init__.py  bv_client.py  bv_ws.py
MCP/bv_plugin/: mcp_listener.py
MCP/bv_plugin/listener_handlers/: __init__.py  anatomy_handlers.py  core_handlers.py  fmri_handlers.py
MCP/servers/: __init__.py  bv_anatomy_server.py  bv_assistant_server.py  bv_core_server.py  bv_fmri_server.py
example/: 01_use_bv_api.py  02_open_bv_doc.py
plugin/bv_plugin/: mcp_listener.py
plugin/bv_ui_control/: CMakeLists.txt  README.md  bv.py
plugin/bv_ui_control/src/: CMakeLists.txt  Export.h  hook.mm  mylib.cpp  mylib.h
prompt/: .rule
prompts/: .rule  .rules
prompts/skills/bv-anatomical-pipeline/: SKILL.md
prompts/skills/bv-coregistration-vtc/: SKILL.md
prompts/skills/bv-dicom-setup/: SKILL.md
prompts/skills/bv-distortion-correction/: SKILL.md
prompts/skills/bv-expert/: SKILL.md  guide-urls.md
prompts/skills/bv-file-formats/: SKILL.md
prompts/skills/bv-fmr-creation/: SKILL.md
prompts/skills/bv-fmri-preprocessing/: SKILL.md
